# drug-adherence-AIIMS

./: .gitignore  auth.py  content.py  db.py  main.py  predict.py  pyproject.toml  render.yaml  requirements.txt  seed_test_data.py
models/: imputer.pkl  model.pkl  scaler.pkl
static/: sw.js
static/demo/: assessment.html  dashboard.html  doctor.html  education.html  login.html
static/js/: app.js
templates/: base_doctor.html  base_patient.html  index.html  login.html  result.html
templates/doctor/: dashboard.html  patient_detail.html
templates/patient/: assessment.html  dashboard.html  education.html  education_article.html  lifestyle.html  log.html  medications.html  notifications.html
