[project]
name = "da-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.1.0",
    "fastapi>=0.111.0",
    "hydra-core>=1.3.2",
    "imbalanced-learn>=0.14.1",
    "jinja2>=3.1.4",
    "joblib>=1.3.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0,<3.0.0",
    "plotly>=6.7.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tabulate>=0.9.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.30.0",
    "xgboost>=3.2.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.0",
]
